--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ p{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: whitesmoke;
     padding: 1%;
+    
+    
 }
 nav > a {
     text-decoration: none;
@@ -53,6 +55,19 @@ nav {
     margin-top: 5%;
 
 }
-img {
-    padding: 2%;
+.section{
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin: 2rem auto 0 auto;
 }
+.section h1{
+    margin: 5px;
+}
+.section p{
+    margin-left: 0px;
+}
+
+
+
